--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-list-results.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-list-results.html
@@ -84,6 +84,16 @@
                 }
             }
 
+            static get observers() {
+                return [
+                    '_getData(data)'
+                ]
+            }
+
+            _getData(data) {
+                console.log(data)
+            }
+
             _handleItemClick(e) {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerFleetListResults.is + '-action-detail', {
                     bubbles: true,
