--- a/elements/crew-team-manager-app/crew-team-manager-app.html
+++ b/elements/crew-team-manager-app/crew-team-manager-app.html
@@ -99,8 +99,6 @@
                 this.$.auth.signOut()
                     .then(() => {
                         this._toast = 'User Logged Out';
-                        this.$.toast.fitInto = this.$.pages;
-                        this.$.toast.open();
                     })
                     .catch((err) => {
                         console.log(err);
@@ -133,7 +131,9 @@
 
                 this.importLazyGroup('lazy').then(function (results) {
                     this._page = page;
-                    this._toast = 'User Logged In';
+                    if (page == 'login') {
+                        this._toast = 'User Logged In';
+                    }
                     this.$.toast.fitInto = this.$.pages;
                     this.$.toast.open();
                     this.dispatchEvent(new CustomEvent('import-loaded', results));
