--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-detail.html
@@ -51,7 +51,41 @@
                 background-color: #164410;
                 color: #fff;
             }
+
+            #fabs-layout {
+                position: absolute;
+                bottom: 16px;
+                right: 16px;
+            }
+
+            .fab {
+                display: none;
+            }
+
+            #fabs-layout #add {
+                display: inherit;
+                background-color: #164410;
+            }
+
+            #fabs-layout:hover .fab {
+                display: inherit;
+            }
+
+            #fabs-layout:hover #add {
+                display: none;
+            }
+
+            #race {
+                background-color: #ff9800;
+                margin-bottom: 16px;
+            }
         </style>
+
+        <firebase-query app-name="laborsync-ctm" id="race-query" path="/regattaScheduleRaces/{{regatta}}" data="{{_races}}">
+        </firebase-query>
+
+        <firebase-document id="fanout" app-name="laborsync-ctm">
+        </firebase-document>
 
         <firebase-document id="firebase" app-name="laborsync-ctm" path="/regattas/{{regatta}}" data="{{_data}}">
         </firebase-document>
@@ -68,13 +102,20 @@
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-schedule-detail-loading id="loading"></crew-team-manager-schedule-detail-loading>
-                <crew-team-manager-schedule-detail-results id="results" data="{{_data}}"></crew-team-manager-schedule-detail-results>
+                <crew-team-manager-schedule-detail-results id="results" data="{{_data}}" race="[[races]]"></crew-team-manager-schedule-detail-results>
                 <crew-team-manager-schedule-detail-message id="message"></crew-team-manager-schedule-detail-message>
             </iron-pages>
 
 
         </app-header-layout>
 
+        <div id="fabs-layout">
+            <div id="fabs">
+                <paper-fab id="race" class="fab" icon="gavel" on-click="_handleActionAddRace"></paper-fab>
+                <paper-fab id="picture" class="fab" icon="image:camera-roll" on-click="_handleActionAddPicture"></paper-fab>
+                <paper-fab id="add" class="fab" icon="icons:add"></paper-fab>
+            </div>
+        </div>
 
     </template>
 
@@ -89,7 +130,8 @@
             static get observers() {
                 return [
                     '_updatePage(regatta)',
-                    '_changePage(page)'
+                    '_changePage(page)',
+                    '_getData(_races.splices)'
                 ]
 
             }
@@ -110,6 +152,34 @@
                         value: ''
                     },
 
+                    _races: {
+                        type: Object,
+                        value: {}
+                    },
+
+                    races: {
+                        type: Array,
+                        value: []
+                    }
+
+                }
+            }
+
+            _getData(races) {
+                let value = {};
+                let index;
+                let path;
+                let name;
+
+                if (races) {
+                    index = races.indexSplices[0].object.length - 1;
+                    path = 'races/' + races.indexSplices[0].object[index].$key;
+                    this.$.fanout.getStoredValue(path)
+                        .then((val) => {
+                            name = val.eventName + ', ' + val.raceTime;
+                            value.name = name;
+                        });
+                    this.races.push(value);
                 }
             }
 
@@ -152,6 +222,20 @@
             _handleActionDelete(e) {
                 this.$.firebase.destroy();
                 this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleDetail.is + '-action-delete', {
+                    bubbles: true,
+                    composed: true
+                }));
+            }
+
+            _handleActionAddRace() {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleDetail.is + '-action-add-race', {
+                    bubbles: true,
+                    composed: true
+                }));
+            }
+
+            _handleActionAddPicture() {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleDetail.is + '-action-add-picture', {
                     bubbles: true,
                     composed: true
                 }));
