--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-race-list.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-race-list.html
@@ -15,12 +15,10 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-
-
-<dom-module id="crew-team-manager-fleet-roster-list">
-    <link rel="lazy-import" group="loading" href="crew-team-manager-fleet-roster-list-loading.html">
-    <link rel="lazy-import" group="results" href="crew-team-manager-fleet-roster-list-results.html">
-    <link rel="lazy-import" group="message" href="crew-team-manager-fleet-roster-list-message.html">
+<dom-module id="crew-team-manager-schedule-race-list">
+    <link rel="lazy-import" group="loading" href="crew-team-manager-schedule-race-list-loading.html">
+    <link rel="lazy-import" group="results" href="crew-team-manager-schedule-race-list-results.html">
+    <link rel="lazy-import" group="message" href="crew-team-manager-schedule-race-list-message.html">
     <template>
         <style>
              :host {
@@ -34,8 +32,8 @@
             }
 
             #layout {
+                /*@apply(--layout-flex);*/
                 @apply(--layout-vertical);
-                @apply(--layout-flex);
             }
 
             #toolbar {
@@ -48,8 +46,14 @@
                 position: relative;
             }
 
-            #loading,
-            #results,
+            #loading {
+                @apply(--layout-fit);
+            }
+
+            #results {
+                @apply(--layout-fit);
+            }
+
             #message {
                 @apply(--layout-fit);
             }
@@ -62,7 +66,7 @@
             }
         </style>
 
-        <firebase-query app-name="laborsync-ctm" id="query" path="/teamAthletes/{{teamId}}" data="{{_data}}">
+        <firebase-query app-name="laborsync-ctm" id="query" path="/teamRaces/{{teamId}}" data="{{_data}}">
         </firebase-query>
 
         <firebase-document id="firebase" app-name="laborsync-ctm">
@@ -73,25 +77,27 @@
             <app-header slot="header" reveals>
                 <app-toolbar id="toolbar">
                     <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
-                    <div main-title id="title">Select Athletes To Add</div>
+                    <div main-title id="title">Select Races To Add</div>
                     <paper-icon-button id="add" icon="check" on-click="_handleActionAdd"></paper-icon-button>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
-                <crew-team-manager-fleet-roster-list-loading id="loading"></crew-team-manager-fleet-roster-list-loading>
-                <crew-team-manager-fleet-roster-list-results id="results" data="[[_data]]" on-crew-team-manager-fleet-roster-list-results-action-select-athletes="_selectAthletes"></crew-team-manager-fleet-roster-list-results>
-                <crew-team-manager-fleet-roster-list-message id="message"></crew-team-manager-fleet-roster-list-message>
+                <crew-team-manager-schedule-race-list-loading id="loading"></crew-team-manager-schedule-race-list-loading>
+                <crew-team-manager-schedule-race-list-results id="results" data="[[_data]]" on-crew-team-manager-schedule-race-list-results-action-select-races="{{selectedRace}}"></crew-team-manager-schedule-race-list-results>
+                <crew-team-manager-schedule-race-list-message id="message"></crew-team-manager-schedule-race-list-message>
             </iron-pages>
 
         </app-header-layout>
+
+
     </template>
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerFleetRosterList extends Polymer.LazyImportsMixin(Polymer.Element) {
+        class crewTeamManagerScheduleRaceList extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
-                return 'crew-team-manager-fleet-roster-list'
+                return 'crew-team-manager-schedule-race-list'
             }
 
             static get observers() {
@@ -105,7 +111,7 @@
             static get properties() {
                 return {
                     page: {
-                        type: String,
+                        type: String
                     },
 
                     _data: {
@@ -114,35 +120,35 @@
 
                     teamId: String,
 
-                    selectedAthletes: {
+                    selectedRace: {
                         type: Array,
                         value: []
                     },
 
-                    boat: {
-                        type: String,
-                        value: ''
-                    }
+                    regatta: String,
+
+
                 }
             }
 
-            _selectAthletes(e) {
+            _selectRace(e) {
 
-                for (let x = 0; x < this.selectedAthletes.length; x++) {
-                    if (this.selectedAthletes[x] == e.detail.athlete) {
-                        this.selectedAthletes.splice(x, x);
+                for (let x = 0; x < this.selectedRace.length; x++) {
+                    if (this.selectedRace[x] == e.detail.athlete) {
+                        this.selectedRace.splice(x, x);
                         return;
                     }
                 }
 
-                this.selectedAthletes.push(e.detail.athlete)
+                this.selectedRace.push(e.detail.athlete)
             }
 
             _handleActionAdd() {
                 let path;
-                for (let x = 0; x < this.selectedAthletes.length; x++) {
-                    path = 'boatAthletes/' + this.boat + '/' + this.selectedAthletes[x]
-                    this.$.firebase.saveValue('boatAthletes', this.boat)
+                for (let x = 0; x < this.selectedRace.length; x++) {
+                    path = 'regattaRace/' + this.regatta + '/' + this.selectedRace[x]
+                    console.log(path)
+                    this.$.firebase.saveValue('regattaRace', this.regatta)
                         .then(() => {
 
                             this.$.firebase.setStoredValue(path, true);
@@ -150,18 +156,18 @@
 
                         });
                 }
-                this.dispatchEvent(new CustomEvent(crewTeamManagerFleetRosterList.is +
-                    '-action-add-athletes', {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleRaceList.is +
+                    '-action-add-race', {
                         bubbles: true,
                         composed: true,
                         detail: {
-                            athletes: this.selectedAthletes
+                            race: this.selectedRace
                         }
                     }));
             }
 
             _handleActionBack() {
-                this.dispatchEvent(new CustomEvent(crewTeamManagerFleetRosterList.is + '-action-back', {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleRaceList.is + '-action-back', {
                     bubbles: true,
                     composed: true,
                 }));
@@ -193,6 +199,6 @@
         }
 
         // Register custom element definition using standard platform API
-        customElements.define(crewTeamManagerFleetRosterList.is, crewTeamManagerFleetRosterList);
+        customElements.define(crewTeamManagerScheduleRaceList.is, crewTeamManagerScheduleRaceList);
     </script>
 </dom-module>
